applications/basic-server/basic-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-server
  labels:
    app: basic-server
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: basic-server
    tier: frontend
